# fasta2csv

./: README.md  setup.cfg
src/fasta2csv/: fasta2csv.py  version.py
