[metadata]
name = fasta2csv
version = attr: fasta2csv.version.__version__
author = Josh Tompkin
author_email = jtompkindev@gmail.com
description = Convert between fasta and delimited text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jtompkin/fasta2csv
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
project_urls =
    changelong = 

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7

[optinos.packages.find]
where = src
